kyverno.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-pods
spec:
  validationFailureAction: enforce
  rules:
    - name: check-privileged-context
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Pods cannot have privileged security contexts."
        pattern:
          spec:
            securityContext:
              privileged: true
      mutate: null
      generate: null
      preconditions: []
